--- a/app/ui/dashboard/navbar/navbar.module.css
+++ b/app/ui/dashboard/navbar/navbar.module.css
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  background-color: #2e374a;
+  background-color: #1e1d1d;
   padding: 10px;
   border-radius: 10px;
 }
