--- a/app/ui/dashboard/products/addProduct/addProduct.module.css
+++ b/app/ui/dashboard/products/addProduct/addProduct.module.css
@@ -17,7 +17,7 @@
   padding: 30px;
   background-color: var(--bg);
   color: var(--text);
-  border: 2px solid #2e374a;
+  border: 2px solid #1e1d1d;
   border-radius: 5px;
   margin-bottom: 30px;
 }
@@ -33,7 +33,8 @@
 .form button{
   width: 100%;
   padding: 30px;
-  background-color: teal;
+  background-color: #fcf119;
+color: black !important;
   color: var(--text);
   border: none;
   border-radius: 5px;
