--- a/app/ui/dashboard/users/singleUser/singleUser.module.css
+++ b/app/ui/dashboard/users/singleUser/singleUser.module.css
@@ -37,7 +37,7 @@
 
 .form input, .form textarea, .form select{
   padding: 20px;
-  border: 2px solid #2e374a;
+  border: 2px solid #1e1d1d;
   border-radius: 5px;
   background-color: var(--bg);
   color: var(--text);
@@ -51,7 +51,8 @@
 .form button{
   width: 100%;
   padding: 20px;
-  background-color: teal;
+  background-color: #fcf119;
+color: black !important;
   color: var(--text);
   border: none;
   border-radius: 5px;
