--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --bg: #151c2c;
-  --bgSoft: #182237;
+  --bg: #292929;
+  --bgSoft: #171717;
   --text: white;
   --textSoft: #b7bac1;
 }
