--- a/app/ui/login/loginForm/loginForm.module.css
+++ b/app/ui/login/loginForm/loginForm.module.css
@@ -14,7 +14,7 @@
 .form input {
   width: 100%;
   padding: 30px;
-  border: 2px solid #2e374a;
+  border: 2px solid #1e1d1d;
   border-radius: 5px;
   background-color: var(--bg);
   color: var(--text);
@@ -23,7 +23,8 @@
 .form button {
   width: 100%;
   padding: 30px;
-  background-color: teal;
+  background-color: #fcf119;
+color: black !important;
   color: var(--text);
   border: none;
   cursor: pointer;
