--- a/app/ui/dashboard/search/search.module.css
+++ b/app/ui/dashboard/search/search.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 10px;
   background-color: #1e1d1d;
-  padding: 10px;
+  padding: 14px 28px;
   border-radius: 10px;
   width: max-content;
 }
