--- a/public/home/assets/css/style.css
+++ b/public/home/assets/css/style.css
@@ -81,8 +81,8 @@ ul {
 .section-full {
   width: 100%;
   height: auto;
-  padding-top: 165px;
-  padding-bottom: 165px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 @media only screen and (max-width: 1024px) {
   .section-full {
@@ -297,43 +297,38 @@ header .m-menu {
 .section-main .content {
   display: flex;
   justify-content: space-between;
-  width: calc(100% - 626px);
+  width: calc(100% - 494px);
   margin-right: auto;
   margin-left: auto;
   height: 100%;
   position: relative;
-}
-@media only screen and (max-width: 1024px) {
-  .section-main .content {
-    width: 100%;
-    gap: 35px;
-    flex-direction: column;
-    justify-content: center;
-  }
+  background: url('../images/teste.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
 }
 @media only screen and (max-width: 767px) {
   .section-main .content {
+    width: 100%;
     padding-right: 15px;
     padding-left: 15px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .section-main .content {
-    padding-right: 100px;
-    padding-left: 100px;
+    width: calc(100% - 100px);
   }
 }
-@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+@media only screen and (min-width: 1025px) and (max-width: 1680px) {
   .section-main .content {
     width: calc(100% - 200px);
   }
 }
 .section-main .content .desc {
   max-width: 600px;
-  padding-top: 150px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
 }
 @media only screen and (max-width: 1024px) {
   .section-main .content .desc {
@@ -671,7 +666,7 @@ header .m-menu {
   }
 }
 .about .txt-content h2::before {
-  content: "16 Anos de Experiência";
+  content: "17 Anos de Experiência";
   color: #000;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #fff;
@@ -1136,6 +1131,7 @@ footer .social .title {
 footer .social ul {
   display: flex;
   gap: 7px;
+  justify-content: center;
 }
 footer .social a {
   width: 25px;
