--- a/app/ui/dashboard/products/singleAlbum/singleAlbum.module.css
+++ b/app/ui/dashboard/products/singleAlbum/singleAlbum.module.css
@@ -37,6 +37,8 @@
 .form{
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
+
 }
 
 .form input, .form textarea, .form select{
@@ -119,7 +121,7 @@
   color: var(--text);
   border: 2px solid #1e1d1d;
   border-radius: 5px;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   width: 100%;
 }
 
@@ -161,4 +163,18 @@
 
 .numPageWrapper input {
   width: 49%;
+}
+
+.fotoContainer {
+  margin-top: 10px;
+  display: flex;
+  gap: 15px;
+}
+
+.eventSection {
+  margin-bottom: 20px;
+}
+
+.fotoItem {
+  text-align: center;
 }
