--- a/app/ui/dashboard/dashboard.module.css
+++ b/app/ui/dashboard/dashboard.module.css
@@ -10,14 +10,22 @@
 }
 
 .content {
-  flex: 4;
+  flex: 5;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.mainContent {
+  flex: 1;
 }
 
 .wrapper {
   display: flex;
   gap: 20px;
   margin-top: 20px;
+  height: 100%;
 }
 
 .main {
@@ -25,6 +33,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  height: 100%;
 }
 
 .cards {
