--- a/app/ui/dashboard/footer/footer.module.css
+++ b/app/ui/dashboard/footer/footer.module.css
@@ -1,15 +1,19 @@
 .container {
+  padding: 20px;
+  border-radius: 10px;
+  background-color: var(--bgSoft);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 30px;
-  color: var(--textSoft);
+  margin-top: 40px;
 }
 
 .logo {
   font-weight: bold;
+  color: var(--textSoft);
 }
 
 .text {
   font-size: 12px;
+  color: var(--textSoft);
 }
