--- a/app/ui/dashboard/products/addProduct/addProduct.module.css
+++ b/app/ui/dashboard/products/addProduct/addProduct.module.css
@@ -15,7 +15,7 @@
 .form textarea,
 .form select,
 .checkboxArea {
-  padding: 30px;
+  padding: 20px 30px;
   background-color: var(--bg);
   color: var(--text);
   border: 2px solid #1e1d1d;
@@ -32,8 +32,8 @@
 }
 
 .form button{
-  width: 100%;
-  padding: 30px;
+  padding: 15px 20px;
+  margin-left: auto;
   background-color: #fcf119;
   color: black !important;
   color: var(--text);
