--- a/app/ui/dashboard/transactions/transactions.module.css
+++ b/app/ui/dashboard/transactions/transactions.module.css
@@ -1,7 +1,8 @@
 .container{
   background-color: var(--bgSoft);
   padding: 20px;
-  border-radius:10px ;
+  border-radius:10px;
+  height: 100%;
 }
 
 .title{
