--- a/app/ui/dashboard/users/addUser/addUser.module.css
+++ b/app/ui/dashboard/users/addUser/addUser.module.css
@@ -1,59 +1,83 @@
-.container {
+.mainWrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--bgSoft);
   padding: 20px;
-  border-radius: 10px;
   margin-top: 20px;
+  border-radius: 9px;
+}
+
+.container {
+  background-color: #333333;
+  padding: 50px;
+  border-radius: 10px;
+  max-width: 650px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .form {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 30px;
 }
 
 .form input,
 .form textarea,
 .form select {
-  padding: 30px;
+  padding: 20px 30px;
   background-color: var(--bg);
   color: var(--text);
   border: 2px solid #1e1d1d;
   border-radius: 5px;
-  margin-bottom: 30px;
+  transition: all 0.3s ease-in-out;
+}
+
+.form input:hover,
+.form textarea:hover,
+.form select:hover {
+  border-color: #fcf119;
 }
 
 .form input, .form select, .inputPasswordWrapper {
-  width: 45%;
+  width: 47%;
 }
 
 .form textarea{
   width: 100%;
 }
 
-.form button{
-  width: 100%;
-  padding: 30px;
+.form button {
+  padding: 15px 20px;
+  margin-left: auto;
   background-color: #fcf119;
-  color: black !important;
-  color: var(--text);
+  color: #222;
+  font-weight: bold;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.form button:hover {
+  background-color: #e2d809;
+  transform: scale(1.05);
 }
 
 .profilePhotoWrapper {
   width: 300px;
   margin: 0 auto;
-  display: block;
   padding: 30px;
   background-color: var(--bg);
   color: var(--text);
   border: 2px solid #1e1d1d;
   border-radius: 5px;
-  margin-bottom: 30px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  gap: 15px;
   align-items: center;
 }
 
@@ -72,7 +96,7 @@
   width: 100%;
   padding: 20px;
   background-color: #fcf119;
-  color: black !important;
+  color: black;
   font-size: 16px;
   text-align: center;
   border: none;
@@ -87,7 +111,8 @@
 .labelShowPassword {
   position: absolute;
   right: 30px;
-  top: 30px;
+  top: 50%;
+  transform: translateY(-50%);
   color: var(--text);
   font-size: 12px;
   cursor: pointer;
@@ -103,4 +128,18 @@
   border-radius: 5px;
   margin-bottom: 15px;
   overflow: hidden;
+}
+
+.profileBtn {
+  margin-left: 0!important;
+}
+
+.purpleBtn {
+  background-color: #5d57c9 !important;
+  color: #fff!important;
+}
+
+.greenBtn {
+  background-color: #0e9d5a!important;
+  color: #fff!important;
 }
