--- a/app/ui/dashboard/users/singleUser/singleUser.module.css
+++ b/app/ui/dashboard/users/singleUser/singleUser.module.css
@@ -1,7 +1,20 @@
-.container {
+.mainWrapper {
+  height: 100%;
   display: flex;
-  gap: 50px;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--bgSoft);
+  padding: 20px;
   margin-top: 20px;
+  border-radius: 9px;
+}
+
+.container {
+  background-color: #333333;
+  padding: 50px;
+  border-radius: 10px;
+  max-width: 650px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .infoContainer {
@@ -30,55 +43,86 @@
   border-radius: 10px;
 }
 
-.form{
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.form div {
   display: flex;
   flex-direction: column;
+  width: 47%;
+  gap: 5px;
 }
 
-.form input, .form textarea, .form select{
-  padding: 20px;
-  border: 2px solid #1e1d1d;
-  border-radius: 5px;
+.form div label {
+  color: gainsboro;
+  font-size: 13px;
+}
+
+.form input,
+.form textarea,
+.form select {
+  padding: 20px 30px;
+  width: 100%;
   background-color: var(--bg);
   color: var(--text);
-  margin: 10px 0px;
+  border: 2px solid #1e1d1d;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
 }
 
-.form label{
-  font-size: 12px;
+.form input:hover,
+.form textarea:hover,
+.form select:hover {
+  border-color: #fcf119;
 }
 
-.form button{
+.form input, .form select, .inputPasswordWrapper {
   width: 100%;
-  padding: 20px;
+}
+
+.form textarea{
+  width: 100%;
+}
+
+.form button {
+  padding: 15px 20px;
+  margin-left: auto;
   background-color: #fcf119;
-color: black !important;
-  color: var(--text);
+  color: #222;
+  font-weight: bold;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.form button:hover {
+  background-color: #e2d809;
+  transform: scale(1.05);
 }
 
 .profilePhotoWrapper {
-  width: 600px;
+  width: 300px;
   margin: 0 auto;
-  display: block;
   padding: 30px;
   background-color: var(--bg);
   color: var(--text);
   border: 2px solid #1e1d1d;
   border-radius: 5px;
-  margin-bottom: 30px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  gap: 15px;
   align-items: center;
 }
 
-.profilePhotoWrapper div {
-  width: 500px;
-  height: 500px;
+.batata {
+  width: 250px;
+  height: 250px;
   margin-bottom: 15px;
   background-position: center center;
   background-repeat: no-repeat;
@@ -89,12 +133,34 @@ color: black !important;
 .profilePhotoWrapper label,
 .profilePhotoWrapper button {
   width: 100%;
-  padding: 30px;
+  padding: 20px;
   background-color: #fcf119;
-  color: black !important;
+  color: black;
+  font-size: 16px;
   text-align: center;
-  color: var(--text);
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.cropperContainer {
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  overflow: hidden;
+}
+
+.profileBtn {
+  margin-left: 0!important;
+}
+
+.purpleBtn {
+  background-color: #5d57c9 !important;
+  color: #fff!important;
+}
+
+.greenBtn {
+  background-color: #0e9d5a!important;
+  color: #fff!important;
 }
