--- a/app/ui/dashboard/products/products.module.css
+++ b/app/ui/dashboard/products/products.module.css
@@ -121,3 +121,8 @@ color: black !important;
   color: var(--text);
   outline: none;
 }
+
+.notFound {
+  text-align: center;
+  margin-top: 50px;
+}
