--- a/app/ui/dashboard/products/products.module.css
+++ b/app/ui/dashboard/products/products.module.css
@@ -4,6 +4,9 @@
   border-radius: 10px;
   margin-top: 20px;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .top{
@@ -125,4 +128,24 @@ color: black !important;
 .notFound {
   text-align: center;
   margin-top: 50px;
+}
+
+.teste {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.teste button,
+.teste svg,
+.teste span {
+  border-color: #b7bac1;
+  color: #b7bac1;
+}
+
+.teste button[aria-current="page"] {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #fcf119;
+  border-color: #fcf119;
 }
