dropdown com pesquisa pra buscar alunos do album

--- a/app/ui/dashboard/products/addProduct/addProduct.module.css
+++ b/app/ui/dashboard/products/addProduct/addProduct.module.css
@@ -233,3 +233,14 @@
 .checkboxLabel:hover::before {
   border-color: #fcf119;
 }
+
+.bgBlack {
+  background-color: var(--bg);
+  color: var(--text);
+  padding-left: 20px;
+}
+
+.bgBlack div,
+.bgBlack label {
+  color: var(--text);
+}
