--- a/app/ui/dashboard/dashboard.module.css
+++ b/app/ui/dashboard/dashboard.module.css
@@ -45,3 +45,46 @@
 .side {
   flex: 1;
 }
+
+.mainFormando {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: 100%;
+  background-color: #292929;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.mainFormando2 {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.mainFormando3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 9px;
+
+}
+
+.mainFormando4 {
+  border: 10px solid black;
+  border-radius: 9px;
+  cursor: pointer;
+}
+
+.mainFormando img {
+  width: 300px;
+
+}
+
+.mainFormando p {
+  font-size: 20px;
+  margin-top: 10px;
+  text-align: center;
+}
