--- a/app/ui/gallery/gallery.module.css
+++ b/app/ui/gallery/gallery.module.css
@@ -36,7 +36,8 @@
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 5rem;
+    row-gap: 5rem;
+    column-gap: 1rem;
     justify-items: center;
     align-items: center;
     max-width: 100%;
