--- a/app/ui/dashboard/dashboard.module.css
+++ b/app/ui/dashboard/dashboard.module.css
@@ -73,14 +73,14 @@
 }
 
 .mainFormando4 {
-  border: 10px solid black;
-  border-radius: 9px;
+  
   cursor: pointer;
 }
 
 .mainFormando img {
   width: 300px;
-
+  border-radius: 9px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .mainFormando p {
