--- a/app/ui/gallery/gallery.module.css
+++ b/app/ui/gallery/gallery.module.css
@@ -36,8 +36,7 @@
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    row-gap: 5rem;
-    column-gap: 1rem;
+    grid-gap: 1rem;
     justify-items: center;
     align-items: center;
     max-width: 100%;
