--- a/app/ui/gallery/gallery.module.css
+++ b/app/ui/gallery/gallery.module.css
@@ -58,8 +58,12 @@
     max-height: 300px;
 }
 
+.gallery {
+    grid-template-columns: repeat(4, 1fr);
+}
+
 /* Limite máximo de 4 fotos por linha */
-@media (min-width: 800px) {
+@media (max-width: 1200px) {
     .gallery {
         grid-template-columns: repeat(3, 1fr);
     }
