--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -23,3 +23,78 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.dropdown {
+  position: relative;
+  color: #333;
+  cursor: default;
+  width: 100%;
+}
+
+.dropdown .arrow {
+  border-color: #999 transparent transparent;
+  border-style: solid;
+  border-width: 5px 5px 0;
+  content: " ";
+  display: block;
+  height: 0;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  width: 0;
+}
+
+.dropdown .arrow.open {
+  border-color: transparent transparent #999;
+  border-width: 0 5px 5px;
+}
+
+.dropdown .selected-value input {
+  line-height: 1.5;
+  font-size: 1rem;
+  background-color: #171717;
+  border: #171717;
+  color: #fff;
+  box-sizing: border-box;
+  cursor: default;
+  outline: none;
+  padding: 16px 52px 16px 30px;
+  border-radius: 4px;
+  transition: all 200msease;
+  width: 100%;
+  cursor: pointer;
+}
+
+.dropdown .options {
+  display: none;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  margin-top: -1px;
+  max-height: 200px;
+  overflow-y: auto;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  z-index: 1000;
+  -webkit-overflow-scrolling: touch;
+}
+
+.dropdown .options.open {
+  display: block;
+}
+
+.dropdown .option {
+  box-sizing: border-box;
+  color: rgba(51, 51, 51, 0.8);
+  cursor: pointer;
+  display: block;
+  padding: 8px 10px;
+}
+
+.dropdown .option.selected,
+.dropdown .option:hover {
+  background-color: #f2f9fc;
+  color: #333;
+}
