--- a/app/ui/dashboard/products/singleAlbum/singleAlbum.module.css
+++ b/app/ui/dashboard/products/singleAlbum/singleAlbum.module.css
@@ -244,3 +244,12 @@
 .bgBlack label {
   color: var(--text);
 }
+
+.dropdownWrapper {
+  width: 100%;
+}
+
+.dropdownWrapper label {
+  font-size: 14px;
+  margin-bottom: 8px;
+}
